--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-server.port=8095
+# Certificate properties
+server.port=8443
+server.ssl.key-store=classpath:keystore.jks
+server.ssl.key-store-password=password
+server.ssl.key-alias=selfsigned
+
+server.ssl.trust-store=classpath:truststore.jks
+server.ssl.trust-store-password=password
+server.ssl.client-auth=need
